k8s-guide/kubernetes-in-action/05_Services_enabling_clients_to_discover_and_talk_to_pods/kubia-svc-sessionAffinity.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: kubia
  sessionAffinity: ClientIP
