k8s-guide/kubernetes-in-action/05_Services_enabling_clients_to_discover_and_talk_to_pods/kubia-ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubia
spec:
  tls: # 전체 TLS 구성
    - hosts:
      - kubia.example.com
      secretName: tls-secret # 이전에 생성한 secret
  rules:
    - host: kubia.example.com
      http:
        paths:
        - path: /
          backend:
            service:
              name: kubia-nodeport
              port:
                number: 80
          pathType: Prefix
